--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "ui-regression:chrome": "cypress run --spec cypress/e2e/login/login.cy.js,cypress/e2e/registration/registration.cy.js,cypress/e2e/shopping_cart/addToCart.cy.js --browser chrome",
-    "ui-regression:electron": "cypress run --spec cypress/e2e/login/login.cy.js,cypress/e2e/registration/registration.cy.js,cypress/e2e/shopping_cart/addToCart.cy.js --browser electron",
-    "install:dependencies": "npm install"
+    "test:Login:chrome": "cypress run --spec cypress/e2e/login/login.cy.js --browser chrome",
+    "test:Login:electron": "cypress run --spec cypress/e2e/login/login.cy.js --browser electron",
+    "test:Registration:chrome": "cypress run --spec cypress/e2e/registration/registration.cy.js --browser chrome",
+    "test:Registration:electron": "cypress run --spec cypress/e2e/registration/registration.cy.js --browser electron",
+    "test:ShoppingCart:chrome": "cypress run --spec cypress/e2e/shopping_cart/addToCart.cy.js --browser chrome",
+    "test:ShoppingCart:electron": "cypress run --spec cypress/e2e/shopping_cart/addToCart.cy.js --browser electron",
+    "install:dependencies": "npm install",
+    "test:parallel:chrome": "npm-run-all --parallel test:Login:chrome test:Registration:chrome test:ShoppingCart:chrome",
+    "test:parallel:electron": "npm-run-all --parallel test:Login:electron test:Registration:electron test:ShoppingCart:electron"
   }
 }
-
-
-
-
