--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "dependencies": {
-    "cypress": "^13.1.0"
+  "name": "cypress_shop_project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "ui-regression": "cypress run --spec cypress/e2e/registration/**.js --browser chrome",
+    "html-reports": "cypress run --spec cypress/e2e/registration/registration.cy.js --browser chrome --headed",
+    "ui-regression:chrome": "cypress run --spec cypress/e2e/registration/**.js --browser chrome",
+    "ui-regression:electron": "cypress run --spec cypress/e2e/registration/**.js --browser electron"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "cypress-mochawesome-reporter": "^3.6.0",
-    "cypress-wait-for-stable-dom": "^0.1.0",
-    "mochawesome": "^7.1.3",
-    "npm-run-all": "^4.1.5"
-  },
-  "scripts": {
-    "test:Login:chrome": "cypress run --spec cypress/e2e/login/login.cy.js --browser chrome",
-    "test:Login:electron": "cypress run --spec cypress/e2e/login/login.cy.js --browser electron",
-    "test:Registration:chrome": "cypress run --spec cypress/e2e/registration/registration.cy.js --browser chrome",
-    "test:Registration:electron": "cypress run --spec cypress/e2e/registration/registration.cy.js --browser electron",
-    "test:ShoppingCart:chrome": "cypress run --spec cypress/e2e/shopping_cart/addToCart.cy.js --browser chrome",
-    "test:ShoppingCart:electron": "cypress run --spec cypress/e2e/shopping_cart/addToCart.cy.js --browser electron",
-    "install:dependencies": "npm install",
-    "test:parallel:chrome": "npm-run-all --parallel test:Login:chrome test:Registration:chrome test:ShoppingCart:chrome",
-    "test:parallel:electron": "npm-run-all --parallel test:Login:electron test:Registration:electron test:ShoppingCart:electron"
+    "cypress": "^13.1.0",
+    "cypress-mochawesome-reporter": "^3.5.1",
+    "faker": "^6.6.6",
+    "mochawesome": "^7.1.3"
   }
 }
