--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "cypress_shop_project",
   "version": "1.0.0",
-  "description": "",
+  "description": "discover best practices for effectively utilizing the Cypress framework",
   "main": "index.js",
   "scripts": {
-    "ui-regression": "cypress run --spec cypress/e2e/registration/**.js --browser chrome",
-    "html-reports": "cypress run --spec cypress/e2e/registration/registration.cy.js --browser chrome --headed",
-    "ui-regression:chrome": "cypress run --spec cypress/e2e/registration/**.js --browser chrome",
-    "ui-regression:electron": "cypress run --spec cypress/e2e/registration/**.js --browser electron"
+    "ui-regression:chrome": "cypress run --spec 'cypress/e2e/**/*' --browser chrome",
+    "ui-regression:electron": "cypress run --spec 'cypress/e2e/**/*' --browser electron",
+    "install:dependencies": "npm install"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vlad Savchuk",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
     "cypress": "^13.1.0",
     "cypress-mochawesome-reporter": "^3.5.1",
     "faker": "^5.5.3",
-    "mochawesome": "^7.1.3"
+    "mochawesome": "^7.1.3",
+    "npm-run-all": "^4.1.5"
   }
 }
