--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,12 @@
-name: Cypress tests
-on: push
+name: cypress_shop_project
+
+on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '0 */5 * * *'  # Runs every 5 hours (0 */5 * * *)
+
 jobs:
   cypress-run:
     name: Cypress run
@@ -37,5 +44,3 @@ jobs:
           name: cypress-execution-report-electron
           path: cypress/reports/html
           retention-days: 30
-
- 
