--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Cypress run with Chrome
         uses: cypress-io/github-action@v6
@@ -45,3 +45,14 @@ jobs:
           path: cypress/reports/html
           retention-days: 30
           
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+  
+        env:
+          # pass the Cypress Cloud record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_USERNAME: Vladyslav Savchuk
+          SLACK_TITLE: Regression Test
+          SLACK_MESSAGE: "Slack notification:test result:${{ job.status }}"
+          SLACK_COLOR: ${{ job.status }}
