--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0 */5 * * *'  # Runs every 5 hours (0 */5 * * *)
+  # schedule:
+  #   - cron: '0 */5 * * *'  # Runs every 5 hours (0 */5 * * *)
 
 jobs:
   cypress-run:
