--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "ui-regression:chrome": "cypress run --spec 'cypress/e2e/**/*' --browser chrome",
     "ui-regression:electron": "cypress run --spec 'cypress/e2e/**/*' --browser electron",
-    "install:dependencies": "npm install"
+    "install:dependencies": "npm install",
+    "cypress:run": "cypress run"
   },
   "keywords": [],
   "author": "Vlad Savchuk",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "cypress": "^13.1.0",
-    "cypress-mochawesome-reporter": "^3.5.1",
+    "cypress": "^13.2.0",
+    "cypress-mochawesome-reporter": "^3.6.0",
     "faker": "^5.5.3",
     "mochawesome": "^7.1.3",
     "npm-run-all": "^4.1.5"
